<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:background="@drawable/ic_launcher_lan_video_foreground"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            android:text="@string/app_name"
            android:textSize="@dimen/init_activity_main_text_size"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_not_new_install"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_starting"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColor="@android:color/white"
            android:text="@string/txt_starting_now"
            android:textSize="@dimen/init_activity_second_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_install"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:textSize="24sp"
            android:text="@string/txt_request_permission_hint"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_4dp"
        android:textSize="@dimen/init_activity_third_text_size"
        android:text="@string/txt_about_hind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>