<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:overScrollMode="ifContentScrolls"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <TextView
            android:id="@+id/tv_list_empty"
            android:text="@string/txt_user_list_is_empty"
            android:textSize="@dimen/user_list_empty_size"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <org.enes.lanvideocall.views.MyFAB
            android:id="@+id/fab_safe"
            android:layout_margin="@dimen/margin_16dp"
            app:fabIcon="@drawable/ic_priority_high_black_24dp"
            app:fabText="@string/txt_iam_safe"
            app:fabTextAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end" />


        <org.enes.lanvideocall.views.MyFAB
            android:id="@+id/fab_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="84dp"
            app:fabIcon="@drawable/ic_message_black_24dp"
            app:fabText="@string/txt_send_message"
            app:fabTextAllCaps="true" />

    </FrameLayout>

</LinearLayout>